corrigir update